Update 1.1 why to learn java.md

--- a/Day 1 -Introduction to java/1.1 why to learn java.md
+++ b/Day 1 -Introduction to java/1.1 why to learn java.md
@@ -1,1 +1,4 @@
+# Why to learn java
+Java is widely used and popular language.      
+widely usage in web apps,mobile apps,enterprise software, backend.
 
