--- a/Day 1 -Introduction to java/1.1 why to learn java.md
+++ b/Day 1 -Introduction to java/1.1 why to learn java.md
@@ -1,5 +1,5 @@
 # Why to learn java
-Java is widely used and popular language.      
-widely usage in web apps,mobile apps,enterprise software, backend.
-java has rich api and community support
+1.Java is widely used and popular language.      
+2.widely usage in web apps,mobile apps,enterprise software, backend.
+3.java has rich api and community support
 
