Update 1.2 what is programming language.md

--- a/Day 1 -Introduction to java/1.2 what is programming language.md
+++ b/Day 1 -Introduction to java/1.2 what is programming language.md
@@ -1,5 +1,5 @@
 # what is programming language?
-Programming language is a formal language that is giving  set of  instruction to machine to perform certain task so that machine.
+Programming language is a formal language that is giving  set of  instruction to machine to perform certain task.
 
 # low level language
  this languge is closer to machine in the  0/1 form i.e assembly code
