Update 1.5 History of java.md

--- a/Day 1 -Introduction to java/1.5 History of java.md
+++ b/Day 1 -Introduction to java/1.5 History of java.md
@@ -1,4 +1,4 @@
 # History of java
-in 1990's james gosling developed a language named as "OAK" for vcr player.
+in 1990's james gosling (sun microsystem) developed a language named as "OAK" for vcr player.
 
 in 1995 renamed as "Java" and released it's first version.
