Update 1.5 History of java.md

--- a/Day 1 -Introduction to java/1.5 History of java.md
+++ b/Day 1 -Introduction to java/1.5 History of java.md
@@ -2,3 +2,5 @@
 in 1990's james gosling (sun microsystem) developed a language named as "OAK" for vcr player.
 
 in 1995 renamed as "Java" and released it's first version.
+
+" write once run everywhere ".
