--- a/Day 1 -Introduction to java/1.5 History of java.md
+++ b/Day 1 -Introduction to java/1.5 History of java.md
@@ -4,3 +4,6 @@ in 1990's james gosling (sun microsystem) developed a language named as "OAK" fo
 in 1995 renamed as "Java" and released it's first version.
 
 " write once run everywhere ".
+Developed with the vision of backword compatiblity - means old version is compatible to upcoming  new version
+                             forword compatibility- means new version is compatible to old version.
+                          EX- Coffee same taste after so many time boil
