Update 1.6 byte code.md

--- a/Day 1 -Introduction to java/1.6 byte code.md
+++ b/Day 1 -Introduction to java/1.6 byte code.md
@@ -1,1 +1,11 @@
-
+# source code
+  the code which is developed by developer
+# compiler
+  compiler checks if there are errors in source code or not
+  compiler convert source code into byte code.
+  # byte code
+  byte code is not human readable code so no one can modify that code
+  it is shared to jvm
+# jvm
+ it is different for different machine .
+ jvm converts byte code to machine level code and runs the code on machine.
