--- a/Day1-java basic/2.1 code in text editor.md
+++ b/Day1-java basic/2.1 code in text editor.md
@@ -1,1 +1,9 @@
-
+# import java.lang.*;
+# public class firstprogram{
+# public static void main( String[] args){
+# System.out.println("hello world");
+# }}
+in text editor name a file as same as class name.java
+on terminal " javac filename.java"
+then run class " java class name"
+then output will be visible.
